Fix spacing in info box.

--- a/css/home.less
+++ b/css/home.less
@@ -5,6 +5,10 @@
   margin-bottom: 10px;
 }
 
+.big-name {
+  margin-bottom: .33em;
+}
+
 .affiliation {
   margin-top: 1em;
 }
